Changed version to snapshot. Updated version of the typechecker. Now removing the component from the parent each time a node is unlinked. Model was not being properly set in the unlinked nodes panel.
refs #4613
refs #4764
refs #4765